# grandline-framework

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml
container/: Dockerfile
ood-apps/example/: manifest.yml  submit.yml.erb
ood-apps/example/template/: script.sh.erb
scripts/: dev-api.sh
src/api/: app.py
src/project_name/analysis/: stats.py
src/project_name/io/: datasets.py
tests/: smoke.py
