[project]
name = "grandline-framework"
version = "0.1.0"
description = "Reusable scientific project template with FastAPI + Polars"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "polars>=0.20",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ipykernel>=6.29",
  "pre-commit>=3.7"
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I","B","C4","UP","SIM","PD"]  # isort, bugbear, comprehensions, pyupgrade, etc.
ignore = ["E501"]  # handled by line-length

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
exclude = ["notebooks/"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/your_project"]

